Update variable name, delete white spaces and dead code